# Eitmad

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/skills/maintain-project-documentation/: SKILL.md
.agents/skills/maintain-project-documentation/agents/: openai.yaml
.agents/skills/maintain-project-documentation/references/: documentation-system.md  issue-search-and-troubleshooting.md  quality-gates.md  zulip-research.md  (+1 more)
.github/workflows/: contracts.yml  windows-supervision.yml
crates/authorization/: Cargo.toml  OWNERSHIP.md
crates/authorization/src/: lib.rs
crates/configuration/: Cargo.toml  OWNERSHIP.md
crates/configuration/src/: lib.rs
crates/contracts/: Cargo.toml  OWNERSHIP.md
crates/contracts/codegen/: contract-checks.mjs  generate.mjs  package-lock.json  package.json
crates/contracts/codegen/test/: contract-checks.test.mjs  platform-bindings.test.mjs
crates/contracts/src/: authorization.rs  background_jobs.rs  catalog.rs  commands.rs  config.rs  errors.rs  events.rs  identity.rs  ipc.rs  lib.rs  macros.rs  notifications.rs  permissions.rs  queries.rs  runtime.rs  sync.rs  transport.rs  updates.rs  versioning.rs
crates/engine-cli/: Cargo.toml  OWNERSHIP.md
crates/engine-cli/src/: main.rs
crates/engine-cli/tests/: process_modes.rs
crates/engine-runtime/: Cargo.toml  OWNERSHIP.md
crates/engine-runtime/src/: authority.rs  authority_store.rs  dispatcher.rs  lib.rs  local_ipc.rs
crates/engine-runtime/src/local_ipc/: subscriptions.rs
crates/extensions/: Cargo.toml  OWNERSHIP.md
crates/extensions/src/: lib.rs
crates/external-integrations/: Cargo.toml  OWNERSHIP.md
crates/external-integrations/src/: lib.rs
crates/observability-audit/: Cargo.toml  OWNERSHIP.md
crates/observability-audit/src/: lib.rs
crates/storage/: Cargo.toml  OWNERSHIP.md
crates/storage/src/: authorization.rs  configuration.rs  lib.rs  migrations.rs  recovery.rs
crates/storage/tests/: database_boundary.rs
crates/sync/: Cargo.toml  OWNERSHIP.md
crates/sync/src/: lib.rs
crates/update-policy/: Cargo.toml  OWNERSHIP.md
crates/update-policy/src/: lib.rs
deploy/: OWNERSHIP.md
docs/: README.md  domain-glossary.md  glossary.md  index.md
docs/_generated/: contracts-v1.md
docs/api/: evolve-contracts-compatibly.md  index.md
docs/architecture/: arabic-first-ux.md  index.md  local-ipc-threat-model.md  target-architecture.md
docs/decisions/: 0001-rust-core-product-authority.md  0002-native-platform-ui-shells.md  0003-separate-supervised-engine-process.md  0004-headless-engine-mode.md  0005-generated-or-validated-contracts.md  0006-rust-owned-configuration.md  0007-rust-owned-database.md  0008-required-unified-synchronization.md  0009-zero-trust-security-model.md  0010-rebac-authorization-foundation.md  0011-arabic-first-user-experience.md  0012-privacy-preserving-observability.md  0013-platform-native-update-adapters.md  0014-rust-derived-json-contracts.md  0015-contract-compatibility-window.md  0016-bounded-platform-process-supervision.md  0017-windows-named-pipe-local-ipc.md  0018-bounded-resumable-local-ipc-events.md  0019-sqlite-authority-storage.md  0020-direct-principal-scope-rebac-policy.md  0021-checksummed-feature-storage-migrations.md  README.md  index.md
docs/deployment/: README.md
docs/developer/: index.md  repository-layout.md
docs/developer/contributing/: arabic-first-feature-checklist.md  documentation-freshness-policy.md  documentation-review-checklist.md  documentation-standard.md
docs/developer/subsystems/: authorization.md  configuration.md  contract-layer.md  engine-runtime.md  local-ipc.md  local-storage.md  windows-process-supervision.md
docs/engineering/: documentation-freshness-policy.md  documentation-review-checklist.md  documentation-standard.md
docs/explanation/: README.md
docs/how-to/: README.md
docs/operations/: index.md  run-engine-runtime.md
docs/product/: README.md  arabic-first-ux.md
docs/reference/: README.md  repository-layout.md
docs/releases/: index.md  protocol-1-1-local-ipc-subscriptions.md  protocol-1-2-configuration-authorization.md
docs/templates/: README.md  adr.md  decision-log.md  feature-documentation.md  module-documentation.md
docs/troubleshooting/: configuration-authorization-failures.md  contract-binding-drift.md  engine-startup-failures.md  index.md  local-ipc-failures.md  windows-engine-supervision-failures.md
docs/tutorials/: README.md
platform-adapters/: OWNERSHIP.md
platform-adapters/linux/: OWNERSHIP.md
platform-adapters/macos/: OWNERSHIP.md
platform-adapters/windows/: Eitmad.Platform.Windows.csproj  OWNERSHIP.md
platform-adapters/windows/LocalIpc/: EngineIpcClient.cs  EngineIpcErrors.cs  EngineSubscription.cs
platform-adapters/windows/ProcessSupervision/: EngineSupervisionContracts.cs  EngineSupervisor.cs  SupervisedEngineSubscription.cs  SupervisionAbstractions.cs  WindowsEngineProcess.cs  WindowsJobObject.cs
platform-adapters/windows/Properties/: AssemblyInfo.cs
platform-adapters/windows/tests/: Eitmad.Platform.Windows.Tests.csproj  Program.cs
server/: OWNERSHIP.md
server/admin-plane/: Cargo.toml  OWNERSHIP.md
server/admin-plane/src/: main.rs
server/control-plane/: Cargo.toml  OWNERSHIP.md
server/control-plane/src/: main.rs
server/relay-plane/: Cargo.toml  OWNERSHIP.md
server/relay-plane/src/: main.rs
server/sync-plane/: Cargo.toml  OWNERSHIP.md
server/sync-plane/src/: main.rs
server/update-plane/: Cargo.toml  OWNERSHIP.md
server/update-plane/src/: main.rs
shells/: OWNERSHIP.md
shells/linux/: OWNERSHIP.md
shells/macos/: OWNERSHIP.md
shells/windows/: OWNERSHIP.md
tests/: OWNERSHIP.md
tests/contract-compatibility/: README.md
tests/contract-compatibility/csharp/: Eitmad.ContractConformance.csproj  Program.cs
tests/contract-compatibility/fixtures/: protocol-v1.json
tests/contract-compatibility/swift/: ContractFixtureTests.swift
tests/end-to-end/: README.md
tests/engine-integration/: README.md
tests/security-boundaries/: README.md
tests/shell-conformance/: README.md
tests/sync-protocol/: README.md
(+7 files in other folders)
