[package]
name = "eitmad-configuration"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
eitmad-authorization = { path = "../authorization" }
eitmad-contracts = { path = "../contracts" }
eitmad-observability-audit = { path = "../observability-audit" }
eitmad-storage = { path = "../storage" }
language-tags = "=0.3.2"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.10.9"
uuid = { version = "=1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile = "=3.24.0"
