[package]
name = "eitmad-contracts"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
schemars = { version = "=1.2.1", features = ["semver1", "uuid1"] }
semver = { version = "=1.0.27", features = ["serde"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
uuid = { version = "=1.23.4", features = ["serde", "v4"] }
