[package]
name = "eitmad-engine-cli"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap = { version = "=4.5.54", features = ["derive"] }
eitmad-contracts = { path = "../contracts" }
eitmad-engine-runtime = { path = "../engine-runtime" }
serde = "=1.0.228"
serde_json = "=1.0.150"
tokio = { version = "=1.49.0", features = ["io-std", "io-util", "macros", "rt-multi-thread", "signal", "sync"] }

[dev-dependencies]
tempfile = "=3.24.0"
