[package]
name = "eitmad-engine-runtime"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "=0.1.89"
eitmad-contracts = { path = "../contracts" }
fs2 = "=0.4.3"
semver = "=1.0.27"
serde = "=1.0.228"
serde_json = "=1.0.150"
subtle = "=2.6.1"
tokio = { version = "=1.49.0", features = ["io-util", "net", "rt", "sync", "time"] }
uuid = { version = "=1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile = "=3.24.0"
tokio = { version = "=1.49.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
