[package]
name = "eitmad-observability-audit"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
eitmad-contracts = { path = "../contracts" }
serde = { version = "=1.0.228", features = ["derive"] }
uuid = { version = "=1.23.4", features = ["v4"] }
