[package]
name = "eitmad-storage"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
eitmad-contracts = { path = "../contracts" }
eitmad-observability-audit = { path = "../observability-audit" }
rusqlite = { version = "=0.40.1", default-features = false, features = ["bundled"] }
serde_json = "=1.0.150"
uuid = { version = "=1.23.4", features = ["v4"] }

[dev-dependencies]
tempfile = "=3.24.0"
