[package]
name = "eitmad-update-policy"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
# Avoid Windows installer heuristics treating test executables containing
# "update" as programs that require elevation.
name = "eitmad_release_policy"

